[package]
name = "shamir"
version = "0.1.0"
authors = ["nfk93 <nfk1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench"
harness = false

[lib]
name = "shamir"
crate-type = ["rlib", "staticlib", "cdylib"]
